--- a/share/man/man4/route.4
+++ b/share/man/man4/route.4
@@ -29,7 +29,7 @@
 .\" $FreeBSD: src/share/man/man4/route.4,v 1.9.2.6 2002/03/17 09:12:44 schweikh Exp $
 .\" $DragonFly: src/share/man/man4/route.4,v 1.3 2004/03/11 12:28:55 hmp Exp $
 .\"
-.Dd January 18, 2002
+.Dd August 7, 2019
 .Dt ROUTE 4
 .Os
 .Sh NAME
@@ -168,6 +168,25 @@ A process may ignore all messages from the routing socket
 by doing a
 .Xr shutdown 2
 system call for further input.
+.Pp
+A process can specify which route message types it's interested in by passing
+an array of route message types to the
+.Xr setsockopt 2
+call with the
+.Dv ROUTE_MSGFILTER
+option at the
+.Dv PF_ROUTE
+level.
+For example, to only get specific messages:
+.Bd -literal -offset indent
+unsigned int rtfilter;
+
+rtfilter = ROUTE_FILTER(RTM_IFINFO) | ROUTE_FILTER(RTM_IFANNOUNCE);
+
+if (setsockopt(routefd, PF_ROUTE, ROUTE_MSGFILTER,
+    &rtfilter, sizeof(rtfilter)) == -1)
+	err(1, "setsockopt(ROUTE_MSGFILTER)");
+.Ed
 .Pp
 If a route is in use when it is deleted,
 the routing entry will be marked down and removed from the routing table,
